force-app/main/default/objects/RightsPassCategoryDefault__mdt/RightsPassCategoryDefault__mdt.object-meta.xml
<CustomObject>
    <description>Frame per category and right: editable, mandatory, forbidden or inherited.</description>
    <label>Rights Pass Category Default</label>
    <pluralLabel>Rights Pass Category Defaults</pluralLabel>
</CustomObject>