force-app/main/default/objects/RightsPassCategoryDefault__mdt/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <description>wie die Account-Picklist, mit Leerzeichen
Central Regulator
Direct Customer
Association Member
Department</description>
    <inlineHelpText>Category of the frame — must match the Account picklist character by character.</inlineHelpText>
    <label>Account Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>