force-app/main/default/objects/RightsPassCategoryDefault__mdt/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>editable
mandatory
forbidden
inherited</description>
    <inlineHelpText>Mode of the frame. No record means editable (open frame). inherited = no own value; the parent&apos;s state applies, incl. causer (used by exactly one record: Department_sampling).</inlineHelpText>
    <label>Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>