force-app/main/default/objects/RightsPassCategoryDefault__mdt/fields/RightKey__c.field-meta.xml
<CustomField>
    <fullName>RightKey__c</fullName>
    <description>order
listing
condition
rebate
wkz
index
sampling</description>
    <inlineHelpText>Right key — must match the registry key in the controller (lower case only).</inlineHelpText>
    <label>Right Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>