force-app/main/default/objects/RightsPassCategoryDefault__mdt/listViews/AllFields.listView-meta.xml
<ListView>
    <fullName>AllFields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>Account_Category__c</columns>
    <columns>Mode__c</columns>
    <columns>RightKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllFields</label>
    <language>en_US</language>
</ListView>